@@ -1,8 +1,8 @@
-// sygpiobundle.h
+// codeinverttest.cpp
 //
-// Abstract a set of LiveWire GPIO signals
+// Test the SyAString parser
 //
-// (C) Copyright 2015 Fred Gleason <fredg@paravelsystems.com>
+// (C) 2017 Fred Gleason <fredg@paravelsystems.com>
 //
 //    This program is free software; you can redistribute it and/or modify
 //    it under the terms of version 2.1 of the GNU Lesser General Public
@@ -19,26 +19,33 @@
 //    Boston, MA  02111-1307  USA
 //
 
-#ifndef SYGPIOBUNDLE_H
-#define SYGPIOBUNDLE_H
+#include <stdio.h>
+#include <stdlib.h>
 
-#include <QString>
+#include <QCoreApplication>
 
-#include <sy/syconfig.h>
+#include <sy/sygpiobundle.h>
 
-class SyGpioBundle
+#include "codeinverttest.h"
+
+MainObject::MainObject(QObject *parent)
+  : QObject(parent)
 {
- public:
-  SyGpioBundle();
-  QString code() const;
-  void setCode(const QString &str);
-  bool state(int offset) const;
-  void setState(int offset,bool state);
-  static QString invertCode(const QString &code);
+  if(qApp->argc()<2) {
+    fprintf(stderr,"codeinverttest: you must specify a test code\n");
+    exit(1);
+  }
+  printf("Test Code: |%s|\n",qApp->argv()[1]);
+  printf("Inversion: |%s|\n",(const char *)SyGpioBundle::invertCode(QString(qApp->argv()[1])).toUtf8());
 
- private:
-  char gpio_code[SWITCHYARD_GPIO_BUNDLE_SIZE+1];
-};
+  exit(0);
+}
 
 
-#endif  // SYGPIOBUNDLE_H
+int main(int argc,char *argv[])
+{
+  QCoreApplication a(argc,argv);
+
+  new MainObject();
+  return a.exec();
+}
